[package]
name = "Rustybox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
text_io = "0.1.13"
